--- a/views/home.ejs
+++ b/views/home.ejs
@@ -16,7 +16,7 @@
     /* Navigation */
     .nav {
       display: flex;
-      justify-content: space-between;
+      justify-content: space-evenly;
       align-items: center;
       padding: 20px 60px;
       background-color: rgba(255, 255, 255, 0.1);
@@ -24,19 +24,38 @@
       box-shadow: 0 4px 10px rgba(0,0,0,0.2);
     }
 
-    .nav .a {
-      text-decoration: none;
-      font-size: 1.1rem;
-      font-weight: bold;
-      color: #ffffff;
-      transition: color 0.3s ease;
-    }
+    
 
-    .nav .a:hover {
-      color: #66fcf1;
-    }
+    .trans_form {
+    margin: 0;
+  padding: 0;
+  border: none;
+  display: inline;
+  background: none;
+  width: auto;
+  height: auto;
+}
 
-    /* Hero Section */
+.trans_button {
+ background-color:transparent;
+ color: white;
+ border: none;
+ width: auto;
+ height: 30px;
+ font-size: larger;
+ font-weight: bolder;
+ 
+}
+
+.trans_button:hover {
+  color: #66fcf1;
+  
+}
+
+
+
+
+   
     .hero {
       text-align: center;
       padding: 60px 20px 30px;
@@ -56,7 +75,7 @@
       line-height: 1.6;
     }
 
-    /* Form Container */
+    
     .container {
       display: flex;
       justify-content: center;
@@ -117,7 +136,7 @@
 
     
 
-    button {
+    .button {
       margin-top: 30px;
       width: 100%;
       padding: 14px;
@@ -131,7 +150,7 @@
       transition: 0.3s ease;
     }
 
-    button:hover {
+    .button:hover {
       transform: translateY(-2px);
       box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3);
     }
@@ -175,9 +194,15 @@
 <body>
 
   <!-- Navbar -->
+
   <div class="nav">
-    <a href="/" class="a">🏠 Home</a>
-    <a href="/transaction" class="a">📊 Transactions</a>
+
+<form action="/transactions" method="POST" class="trans_form">
+  
+  <button type="submit" class="trans_button" > Transactions</button>
+  
+</form>
+
   </div>
 
 
@@ -213,7 +238,7 @@
       <label for="amount">Amount</label>
       <input type="number" name="amount" min="1" placeholder="e.g., 1500" required>
 
-      <button type="submit">➕ Add Expense</button>
+      <button type="submit" class="button">➕ Add Expense</button>
     </form>
   </div>
 
